tests/requests/invalid/011.py
from gunicorn import Config
from gunicorn import LimitRequestHeaders

request = LimitRequestHeaders
cfg = Config()
cfg.set('limit_request_fields', 2)
